@@ -3077,7 +3077,7 @@ that options essential to run the compiler even for linking, such as
 those to set the architecture, should be specified as part of @code{CC}
 rather than in @code{CFLAGS}.)
 
-Unless you do not want to view graphs on-screen (or use a Mac) you need
+Unless you do not want to view graphs on-screen (or use OS X) you need
 @samp{X11} installed, including its headers and client libraries. For
 recent Fedora distributions it means (at least) RPMs @samp{libX11},
 @samp{libX11-devel}, @samp{libXt} and @samp{libXt-devel}.  On Debian we
@@ -3113,7 +3113,7 @@ functions@footnote{including the @code{opendir}, @code{readdir},
 @code{setenv}.} are essential, and others@footnote{such as
 @code{realpath}, @code{symlink}.} will be used if available.
 
-@c PCRE 8.32 is from Nov 2012
+@c PCRE[1] 8.32 is from Nov 2012
 @c zlib 1.2.5 is from July 2010, bzip2 1.0.6 from Sept 2010
 @c xz 5.0.3 is from May 2011
 @c libcurl 7.28.0 was released in Oct 2012
@@ -3123,17 +3123,30 @@ Installations of @code{zlib} (version 1.2.5 or later), @code{libbz2}
 @code{liblzma}@footnote{most often distributed as part of @code{xz}:
 possible names in Linux distributions include
 @code{xz-devel}/@code{xz-libs} and @code{liblzma-dev}.} version 5.0.3 or
-later, PCRE (version 8.32 or later@footnote{and not PCRE2, which started
-at version 10.0.  PCRE must be built with UTF-8 support (not the
-default) and support for Unicode properties is assumed by some @R{}
-packages.  Only the first is tested by @command{configure}, but both can
-be checked at run-time by calling @code{pcre_config()}. JIT support is
-desirable for the best performance.}) and @code{libcurl} (version 7.28.0
-or later) are required.  Information on @code{libcurl} is found from the
-@command{curl-config} script: if that is missing or needs to be
-overridden@footnote{for example to specify static linking with a build
-which has both shared and static libraries.} there are macros to do so
-described in file @file{config.site}.
+later are required.
+
+PCRE@footnote{sometimes known as PCRE1, and not PCRE2 which started at
+version 10.0.} (version 8.32 or later, although versions 8.10--8.31 will
+be accepted with a deprecation warning) is required (or just its library
+and headers if packaged separately).  PCRE must be built with UTF-8
+support (not the default, and checked by @command{configure}) and
+support for Unicode properties is assumed by some @R{} packages.  JIT
+support is desirable for the best performance: support for this and
+Unicode properties can be checked at run-time by calling
+@code{pcre_config()}.  If building PCRE for use with @R{} a suitable
+@command{configure} command might be
+@example
+/configure --enable-utf --enable-unicode-properties --enable-jit --disable-cpp
+@end example
+@noindent  
+The @option{--enable-jit} flag is supported for most common CPUs.
+
+Library @code{libcurl} (version 7.28.0 or later) is required.
+Information on @code{libcurl} is found from the @command{curl-config}
+script: if that is missing or needs to be overridden@footnote{for
+example to specify static linking with a build which has both shared and
+static libraries.} there are macros to do so described in file
+@file{config.site}.
 
 A @command{tar} program is needed to unpack the sources and packages
 (including the recommended packages).  A version@footnote{Such as
